@@ -4,9 +4,20 @@ Change Log
 
 Release 0.5.5.6
 	- Bug fix for ID: 3571941
+	  When creating new access rights an neither group nor user is selected, 
+	  there is no error message
+	  
 	- Bug fix for ID: 3571929
+	  changing group permission to 'write' doesn't work
+	  
 	- Bug fix for ID: 3571851
-	- added datepicker in access right administration (ID: 3571829)
+	  Missing check, whether a repository already exists
+	  
+	- Bug fix for ID: 3572479
+	  no configurable user sort in workOnGroupAccessRight.php
+	  
+	- Feature request ID: 3571829
+	  added datepicker in access right administration
 	
 Release 0.5.5.5
 	- Added three custom fields (ID: 3555321)
